contrib/libs/pdfium/public/fpdfview.h


typedef struct fpdf_action_t__* FPDF_ACTION;
typedef struct fpdf_annotation_t__* FPDF_ANNOTATION;
typedef struct fpdf_bookmark_t__* FPDF_BOOKMARK;
typedef struct fpdf_dest_t__* FPDF_DEST;
typedef struct fpdf_document_t__* FPDF_DOCUMENT;
typedef struct fpdf_link_t__* FPDF_LINK;
typedef struct fpdf_page_t__* FPDF_PAGE;
typedef struct fpdf_pageobject_t__* FPDF_PAGEOBJECT;  
typedef struct fpdf_pageobjectmark_t__* FPDF_PAGEOBJECTMARK;
typedef int FPDF_BOOL;
typedef float FS_FLOAT;
typedef unsigned short FPDF_WCHAR;
typedef const char* FPDF_BYTESTRING;
typedef struct _FS_MATRIX_ {
  float a;
  float b;
  float c;
  float d;
  float e;
  float f;
} FS_MATRIX;
typedef struct _FS_RECTF_ {
  float left;
  float top;
  float right;
  float bottom;
} * FS_LPRECTF, FS_RECTF;
typedef struct _FS_QUADPOINTSF {
  FS_FLOAT x1;
  FS_FLOAT y1;
  FS_FLOAT x2;
  FS_FLOAT y2;
  FS_FLOAT x3;
  FS_FLOAT y3;
  FS_FLOAT x4;
  FS_FLOAT y4;
} FS_QUADPOINTSF;
typedef int FPDF_OBJECT_TYPE;