contrib/python/pypdfium2/pypdfium2_raw/bindings.py


# ./fpdf_doc.h: 124
FPDFBookmark_GetDest = _libs['pdfium']['FPDFBookmark_GetDest']
FPDFBookmark_GetDest.argtypes = (FPDF_DOCUMENT, FPDF_BOOKMARK)
FPDFBookmark_GetDest.restype = FPDF_DEST

# ./fpdf_doc.h: 137
FPDFBookmark_GetAction = _libs['pdfium']['FPDFBookmark_GetAction']
FPDFBookmark_GetAction.argtypes = (FPDF_BOOKMARK, )
FPDFBookmark_GetAction.restype = FPDF_ACTION

# ./fpdf_doc.h: 149
FPDFAction_GetType = _libs['pdfium']['FPDFAction_GetType']
FPDFAction_GetType.argtypes = (FPDF_ACTION, )
FPDFAction_GetType.restype = c_ulong

# ./fpdf_doc.h: 163
FPDFAction_GetDest = _libs['pdfium']['FPDFAction_GetDest']
FPDFAction_GetDest.argtypes = (FPDF_DOCUMENT, FPDF_ACTION)
FPDFAction_GetDest.restype = FPDF_DEST

# ./fpdf_doc.h: 181
FPDFAction_GetFilePath = _libs['pdfium']['FPDFAction_GetFilePath']
FPDFAction_GetFilePath.argtypes = (FPDF_ACTION, POINTER(None), c_ulong)
FPDFAction_GetFilePath.restype = c_ulong

# ./fpdf_doc.h: 207
FPDFAction_GetURIPath = _libs['pdfium']['FPDFAction_GetURIPath']
FPDFAction_GetURIPath.argtypes = (FPDF_DOCUMENT, FPDF_ACTION, POINTER(None), c_ulong)
FPDFAction_GetURIPath.restype = c_ulong

# ./fpdf_doc.h: 218
FPDFDest_GetDestPageIndex = _libs['pdfium']['FPDFDest_GetDestPageIndex']
FPDFDest_GetDestPageIndex.argtypes = (FPDF_DOCUMENT, FPDF_DEST)
FPDFDest_GetDestPageIndex.restype = c_int

# ./fpdf_doc.h: 231
FPDFDest_GetView = _libs['pdfium']['FPDFDest_GetView']
FPDFDest_GetView.argtypes = (FPDF_DEST, POINTER(c_ulong), POINTER(FS_FLOAT))
FPDFDest_GetView.restype = c_ulong

# ./fpdf_doc.h: 248
FPDFDest_GetLocationInPage = _libs['pdfium']['FPDFDest_GetLocationInPage']
FPDFDest_GetLocationInPage.argtypes = (FPDF_DEST, POINTER(FPDF_BOOL), POINTER(FPDF_BOOL), POINTER(FPDF_BOOL), POINTER(FS_FLOAT), POINTER(FS_FLOAT), POINTER(FS_FLOAT))
FPDFDest_GetLocationInPage.restype = FPDF_BOOL

# ./fpdf_doc.h: 266
FPDFLink_GetLinkAtPoint = _libs['pdfium']['FPDFLink_GetLinkAtPoint']
FPDFLink_GetLinkAtPoint.argtypes = (FPDF_PAGE, c_double, c_double)
FPDFLink_GetLinkAtPoint.restype = FPDF_LINK

# ./fpdf_doc.h: 281
FPDFLink_GetLinkZOrderAtPoint = _libs['pdfium']['FPDFLink_GetLinkZOrderAtPoint']
FPDFLink_GetLinkZOrderAtPoint.argtypes = (FPDF_PAGE, c_double, c_double)
FPDFLink_GetLinkZOrderAtPoint.restype = c_int

# ./fpdf_doc.h: 293
FPDFLink_GetDest = _libs['pdfium']['FPDFLink_GetDest']
FPDFLink_GetDest.argtypes = (FPDF_DOCUMENT, FPDF_LINK)
FPDFLink_GetDest.restype = FPDF_DEST

# ./fpdf_doc.h: 303
FPDFLink_GetAction = _libs['pdfium']['FPDFLink_GetAction']
FPDFLink_GetAction.argtypes = (FPDF_LINK, )
FPDFLink_GetAction.restype = FPDF_ACTION

# ./fpdf_doc.h: 313
FPDFLink_Enumerate = _libs['pdfium']['FPDFLink_Enumerate']
FPDFLink_Enumerate.argtypes = (FPDF_PAGE, POINTER(c_int), POINTER(FPDF_LINK))
FPDFLink_Enumerate.restype = FPDF_BOOL

# ./fpdf_doc.h: 326
FPDFLink_GetAnnot = _libs['pdfium']['FPDFLink_GetAnnot']
FPDFLink_GetAnnot.argtypes = (FPDF_PAGE, FPDF_LINK)
FPDFLink_GetAnnot.restype = FPDF_ANNOTATION

# ./fpdf_doc.h: 334
FPDFLink_GetAnnotRect = _libs['pdfium']['FPDFLink_GetAnnotRect']
FPDFLink_GetAnnotRect.argtypes = (FPDF_LINK, POINTER(FS_RECTF))
FPDFLink_GetAnnotRect.restype = FPDF_BOOL

# ./fpdf_doc.h: 342
FPDFLink_CountQuadPoints = _libs['pdfium']['FPDFLink_CountQuadPoints']
FPDFLink_CountQuadPoints.argtypes = (FPDF_LINK, )
FPDFLink_CountQuadPoints.restype = c_int

# ./fpdf_doc.h: 352
FPDFLink_GetQuadPoints = _libs['pdfium']['FPDFLink_GetQuadPoints']
FPDFLink_GetQuadPoints.argtypes = (FPDF_LINK, c_int, POINTER(FS_QUADPOINTSF))
FPDFLink_GetQuadPoints.restype = FPDF_BOOL

# ./fpdf_doc.h: 367
FPDF_GetPageAAction = _libs['pdfium']['FPDF_GetPageAAction']
FPDF_GetPageAAction.argtypes = (FPDF_PAGE, c_int)
FPDF_GetPageAAction.restype = FPDF_ACTION

# ./fpdf_doc.h: 385
FPDF_GetFileIdentifier = _libs['pdfium']['FPDF_GetFileIdentifier']
FPDF_GetFileIdentifier.argtypes = (FPDF_DOCUMENT, FPDF_FILEIDTYPE, POINTER(None), c_ulong)
FPDF_GetFileIdentifier.restype = c_ulong

# ./fpdf_doc.h: 411
FPDF_GetMetaText = _libs['pdfium']['FPDF_GetMetaText']
FPDF_GetMetaText.argtypes = (FPDF_DOCUMENT, FPDF_BYTESTRING, POINTER(None), c_ulong)
FPDF_GetMetaText.restype = c_ulong

# ./fpdf_doc.h: 429
FPDF_GetPageLabel = _libs['pdfium']['FPDF_GetPageLabel']
FPDF_GetPageLabel.argtypes = (FPDF_DOCUMENT, c_int, POINTER(None), c_ulong)
FPDF_GetPageLabel.restype = c_ulong

# /usr/include/x86_64-linux-gnu/bits/types.h: 38
__uint8_t = c_ubyte

# /usr/include/x86_64-linux-gnu/bits/types.h: 40
__uint16_t = c_ushort

# /usr/include/x86_64-linux-gnu/bits/types.h: 42
__uint32_t = c_uint

# /usr/include/x86_64-linux-gnu/bits/types.h: 160
__time_t = c_long

# /usr/include/x86_64-linux-gnu/bits/stdint-uintn.h: 23
uint8_t = __uint8_t

# /usr/include/x86_64-linux-gnu/bits/stdint-uintn.h: 24
uint16_t = __uint16_t

# /usr/include/x86_64-linux-gnu/bits/stdint-uintn.h: 25
uint32_t = __uint32_t

# ./fpdf_edit.h: 93
class struct_FPDF_IMAGEOBJ_METADATA (Structure):
    __slots__ = ('width', 'height', 'horizontal_dpi', 'vertical_dpi', 'bits_per_pixel', 'colorspace', 'marked_content_id')

struct_FPDF_IMAGEOBJ_METADATA._fields_ = (
    ('width', c_uint),
    ('height', c_uint),
    ('horizontal_dpi', c_float),
    ('vertical_dpi', c_float),
    ('bits_per_pixel', c_uint),
    ('colorspace', c_int),
    ('marked_content_id', c_int),
)

# ./fpdf_edit.h: 93
FPDF_IMAGEOBJ_METADATA = struct_FPDF_IMAGEOBJ_METADATA

# ./fpdf_edit.h: 102
FPDF_CreateNewDocument = _libs['pdfium']['FPDF_CreateNewDocument']
FPDF_CreateNewDocument.argtypes = ()
FPDF_CreateNewDocument.restype = FPDF_DOCUMENT

# ./fpdf_edit.h: 117
FPDFPage_New = _libs['pdfium']['FPDFPage_New']
FPDFPage_New.argtypes = (FPDF_DOCUMENT, c_int, c_double, c_double)
FPDFPage_New.restype = FPDF_PAGE

# ./fpdf_edit.h: 126
FPDFPage_Delete = _libs['pdfium']['FPDFPage_Delete']
FPDFPage_Delete.argtypes = (FPDF_DOCUMENT, c_int)
FPDFPage_Delete.restype = None

# ./fpdf_edit.h: 156
FPDF_MovePages = _libs['pdfium']['FPDF_MovePages']
FPDF_MovePages.argtypes = (FPDF_DOCUMENT, POINTER(c_int), c_ulong, c_int)
FPDF_MovePages.restype = FPDF_BOOL

# ./fpdf_edit.h: 170
FPDFPage_GetRotation = _libs['pdfium']['FPDFPage_GetRotation']
FPDFPage_GetRotation.argtypes = (FPDF_PAGE, )
FPDFPage_GetRotation.restype = c_int

# ./fpdf_edit.h: 180
FPDFPage_SetRotation = _libs['pdfium']['FPDFPage_SetRotation']
FPDFPage_SetRotation.argtypes = (FPDF_PAGE, c_int)
FPDFPage_SetRotation.restype = None

# ./fpdf_edit.h: 188
FPDFPage_InsertObject = _libs['pdfium']['FPDFPage_InsertObject']
FPDFPage_InsertObject.argtypes = (FPDF_PAGE, FPDF_PAGEOBJECT)
FPDFPage_InsertObject.restype = None

# ./fpdf_edit.h: 221
FPDFPage_RemoveObject = _libs['pdfium']['FPDFPage_RemoveObject']
FPDFPage_RemoveObject.argtypes = (FPDF_PAGE, FPDF_PAGEOBJECT)
FPDFPage_RemoveObject.restype = FPDF_BOOL

# ./fpdf_edit.h: 228
FPDFPage_CountObjects = _libs['pdfium']['FPDFPage_CountObjects']
FPDFPage_CountObjects.argtypes = (FPDF_PAGE, )
FPDFPage_CountObjects.restype = c_int

# ./fpdf_edit.h: 236
FPDFPage_GetObject = _libs['pdfium']['FPDFPage_GetObject']
FPDFPage_GetObject.argtypes = (FPDF_PAGE, c_int)
FPDFPage_GetObject.restype = FPDF_PAGEOBJECT

# ./fpdf_edit.h: 244
FPDFPage_HasTransparency = _libs['pdfium']['FPDFPage_HasTransparency']
FPDFPage_HasTransparency.argtypes = (FPDF_PAGE, )
FPDFPage_HasTransparency.restype = FPDF_BOOL

# ./fpdf_edit.h: 254
FPDFPage_GenerateContent = _libs['pdfium']['FPDFPage_GenerateContent']
FPDFPage_GenerateContent.argtypes = (FPDF_PAGE, )
FPDFPage_GenerateContent.restype = FPDF_BOOL

# ./fpdf_edit.h: 263
FPDFPageObj_Destroy = _libs['pdfium']['FPDFPageObj_Destroy']
FPDFPageObj_Destroy.argtypes = (FPDF_PAGEOBJECT, )
FPDFPageObj_Destroy.restype = None

# ./fpdf_edit.h: 271
FPDFPageObj_HasTransparency = _libs['pdfium']['FPDFPageObj_HasTransparency']
FPDFPageObj_HasTransparency.argtypes = (FPDF_PAGEOBJECT, )
FPDFPageObj_HasTransparency.restype = FPDF_BOOL

# ./fpdf_edit.h: 279
FPDFPageObj_GetType = _libs['pdfium']['FPDFPageObj_GetType']
FPDFPageObj_GetType.argtypes = (FPDF_PAGEOBJECT, )
FPDFPageObj_GetType.restype = c_int

# ./fpdf_edit.h: 328
FPDFPageObj_Transform = _libs['pdfium']['FPDFPageObj_Transform']
FPDFPageObj_Transform.argtypes = (FPDF_PAGEOBJECT, c_double, c_double, c_double, c_double, c_double, c_double)
FPDFPageObj_Transform.restype = None

# ./fpdf_edit.h: 349
FPDFPageObj_TransformF = _libs['pdfium']['FPDFPageObj_TransformF']
FPDFPageObj_TransformF.argtypes = (FPDF_PAGEOBJECT, POINTER(FS_MATRIX))
FPDFPageObj_TransformF.restype = FPDF_BOOL

# ./fpdf_edit.h: 369
FPDFPageObj_GetMatrix = _libs['pdfium']['FPDFPageObj_GetMatrix']
FPDFPageObj_GetMatrix.argtypes = (FPDF_PAGEOBJECT, POINTER(FS_MATRIX))
FPDFPageObj_GetMatrix.restype = FPDF_BOOL

# ./fpdf_edit.h: 384
FPDFPageObj_SetMatrix = _libs['pdfium']['FPDFPageObj_SetMatrix']
FPDFPageObj_SetMatrix.argtypes = (FPDF_PAGEOBJECT, POINTER(FS_MATRIX))
FPDFPageObj_SetMatrix.restype = FPDF_BOOL

# ./fpdf_edit.h: 400
FPDFPage_TransformAnnots = _libs['pdfium']['FPDFPage_TransformAnnots']
FPDFPage_TransformAnnots.argtypes = (FPDF_PAGE, c_double, c_double, c_double, c_double, c_double, c_double)
FPDFPage_TransformAnnots.restype = None

# ./fpdf_edit.h: 414
FPDFPageObj_NewImageObj = _libs['pdfium']['FPDFPageObj_NewImageObj']
FPDFPageObj_NewImageObj.argtypes = (FPDF_DOCUMENT, )
FPDFPageObj_NewImageObj.restype = FPDF_PAGEOBJECT

# ./fpdf_edit.h: 423
FPDFPageObj_GetMarkedContentID = _libs['pdfium']['FPDFPageObj_GetMarkedContentID']
FPDFPageObj_GetMarkedContentID.argtypes = (FPDF_PAGEOBJECT, )
FPDFPageObj_GetMarkedContentID.restype = c_int

# ./fpdf_edit.h: 433
FPDFPageObj_CountMarks = _libs['pdfium']['FPDFPageObj_CountMarks']
FPDFPageObj_CountMarks.argtypes = (FPDF_PAGEOBJECT, )
FPDFPageObj_CountMarks.restype = c_int

# ./fpdf_edit.h: 446
FPDFPageObj_GetMark = _libs['pdfium']['FPDFPageObj_GetMark']
FPDFPageObj_GetMark.argtypes = (FPDF_PAGEOBJECT, c_ulong)
FPDFPageObj_GetMark.restype = FPDF_PAGEOBJECTMARK

# ./fpdf_edit.h: 459
FPDFPageObj_AddMark = _libs['pdfium']['FPDFPageObj_AddMark']
FPDFPageObj_AddMark.argtypes = (FPDF_PAGEOBJECT, FPDF_BYTESTRING)
FPDFPageObj_AddMark.restype = FPDF_PAGEOBJECTMARK

# ./fpdf_edit.h: 470
FPDFPageObj_RemoveMark = _libs['pdfium']['FPDFPageObj_RemoveMark']
FPDFPageObj_RemoveMark.argtypes = (FPDF_PAGEOBJECT, FPDF_PAGEOBJECTMARK)
FPDFPageObj_RemoveMark.restype = FPDF_BOOL

# ./fpdf_edit.h: 487
FPDFPageObjMark_GetName = _libs['pdfium']['FPDFPageObjMark_GetName']
FPDFPageObjMark_GetName.argtypes = (FPDF_PAGEOBJECTMARK, POINTER(FPDF_WCHAR), c_ulong, POINTER(c_ulong))
FPDFPageObjMark_GetName.restype = FPDF_BOOL

# ./fpdf_edit.h: 500
FPDFPageObjMark_CountParams = _libs['pdfium']['FPDFPageObjMark_CountParams']
FPDFPageObjMark_CountParams.argtypes = (FPDF_PAGEOBJECTMARK, )
FPDFPageObjMark_CountParams.restype = c_int

# ./fpdf_edit.h: 518
FPDFPageObjMark_GetParamKey = _libs['pdfium']['FPDFPageObjMark_GetParamKey']
FPDFPageObjMark_GetParamKey.argtypes = (FPDF_PAGEOBJECTMARK, c_ulong, POINTER(FPDF_WCHAR), c_ulong, POINTER(c_ulong))
FPDFPageObjMark_GetParamKey.restype = FPDF_BOOL

# ./fpdf_edit.h: 532
FPDFPageObjMark_GetParamValueType = _libs['pdfium']['FPDFPageObjMark_GetParamValueType']
FPDFPageObjMark_GetParamValueType.argtypes = (FPDF_PAGEOBJECTMARK, FPDF_BYTESTRING)
FPDFPageObjMark_GetParamValueType.restype = FPDF_OBJECT_TYPE

# ./fpdf_edit.h: 547
FPDFPageObjMark_GetParamIntValue = _libs['pdfium']['FPDFPageObjMark_GetParamIntValue']
FPDFPageObjMark_GetParamIntValue.argtypes = (FPDF_PAGEOBJECTMARK, FPDF_BYTESTRING, POINTER(c_int))
FPDFPageObjMark_GetParamIntValue.restype = FPDF_BOOL

# ./fpdf_edit.h: 583
FPDFPageObjMark_GetParamStringValue = _libs['pdfium']['FPDFPageObjMark_GetParamStringValue']
FPDFPageObjMark_GetParamStringValue.argtypes = (FPDF_PAGEOBJECTMARK, FPDF_BYTESTRING, POINTER(FPDF_WCHAR), c_ulong, POINTER(c_ulong))
FPDFPageObjMark_GetParamStringValue.restype = FPDF_BOOL
